# generic

./: Readme.md
DataStructures/Sorting/: Sorting.pro  main.cpp  quicksort.h  selectionsort.h  testmanuers.cpp  testmanuers.h
QTThreadTest/: QTThreadTest.pro  mixin.cpp  mixin.h  navi.cpp  navi.h  stdthreadqt.cpp  stdthreadqt.h  subscription.h  userinterface.cpp  userinterface.h  userinterface.ui
QTThreadTest/Header/: header.h
QTThreadTest/Server/: datalistener.cpp  datalistener.h
Test_Poker/mcmithun-main/: README.md
Test_Poker/mcmithun-main/Test_Poker/: CMakeLists.txt  Card.h  CardDecks.h  HandEvaluator.h  PlayCards.h  Test.cpp  buildall.sh
python/tools/: ImageEditor.py  ImportfromYoutTube.py  MergePdf.py
xmlparser/: main.cpp  resources.h  tag.cpp  tag.h  xmldocquery.cpp  xmldocquery.h  xmlparser.cpp  xmlparser.h  xmlparser.pro
